--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -3,6 +3,6 @@
 @import 'lib/functions.scss';
 @import '~@woozdesign/colors/colors';
 @import '~@woozdesign/icons/dist/styles.css';
-
 @import 'lib/tokens/tokens.scss';
+@import 'lib/mixins.scss';
 @import 'lib/utils/utils.scss';
