--- a/src/components/Button/styles/BaseButton.module.scss
+++ b/src/components/Button/styles/BaseButton.module.scss
@@ -1,3 +1,5 @@
+@use '@/styles/lib/mixins.scss';
+
 .button {
   // Layout
   border: none;
@@ -38,32 +40,6 @@
     width: 100%;
   }
 
-  &--xlarge {
-    height: 48px;
-    border-radius: max(var(--radius-5), var(--radius-full));
-    font-size: var(--font-size-6);
-    padding: var(--space-2) var(--space-5);
-  }
-
-  &--large {
-    height: 40px;
-    font-size: var(--font-size-5);
-    padding: var(--space-1) var(--space-4);
-    border-radius: max(var(--radius-4), var(--radius-full));
-  }
-  &--medium {
-    font-size: var(--font-size-4);
-    padding: var(--space-1) var(--space-3);
-    border-radius: max(var(--radius-3), var(--radius-full));
-    height: 34px;
-  }
-  &--small {
-    height: 28px;
-    font-size: var(--font-size-3);
-    border-radius: max(var(--radius-3), var(--radius-full));
-    padding: var(--space-1) var(--space-2);
-  }
-
   &--disabled {
     opacity: 0.4;
     cursor: not-allowed;
@@ -89,4 +65,34 @@
 
 a {
   box-sizing: border-box;
+}
+
+.wt-button {
+  @include mixins.breakpoints {
+    &-xlarge {
+      height: 48px;
+      border-radius: max(var(--radius-5), var(--radius-full));
+      font-size: var(--font-size-6);
+      padding: var(--space-2) var(--space-5);
+    }
+
+    &-large {
+      height: 40px;
+      font-size: var(--font-size-5);
+      padding: var(--space-1) var(--space-4);
+      border-radius: max(var(--radius-4), var(--radius-full));
+    }
+    &-medium {
+      font-size: var(--font-size-4);
+      padding: var(--space-1) var(--space-3);
+      border-radius: max(var(--radius-3), var(--radius-full));
+      height: 34px;
+    }
+    &-small {
+      height: 28px;
+      font-size: var(--font-size-3);
+      border-radius: max(var(--radius-3), var(--radius-full));
+      padding: var(--space-1) var(--space-2);
+    }
+  }
 }
