--- a/src/components/Button/styles/TranslucentButton.module.scss
+++ b/src/components/Button/styles/TranslucentButton.module.scss
@@ -1,17 +1,17 @@
-// @use
-@import '@/styles/lib/functions';
+@use '@/styles/lib/functions';
+
 .button--translucent {
   color: var(--color-accent-12);
-  background-color: opacity(var(--color-accent-12), 95%);
+  background-color: functions.opacity(var(--color-accent-12), 95%);
   backdrop-filter: var(--translucent);
   -webkit-backdrop-filter: var(--translucent);
 
   &:hover {
-    background-color: opacity(var(--color-accent-12), 90%);
+    background-color: functions.opacity(var(--color-accent-12), 90%);
   }
 
   &:active {
-    background-color: opacity(var(--color-accent-11), 95%);
+    background-color: functions.opacity(var(--color-accent-11), 95%);
     // box-shadow: boxShadowAlpha(var(--color-accent-9));
   }
 
