--- a/src/components/Toast/Toast.module.scss
+++ b/src/components/Toast/Toast.module.scss
@@ -1,5 +1,4 @@
-// @use
-@import '@/styles/lib/functions';
+@use '@/styles/lib/functions';
 
 .toast {
   z-index: 9999;
@@ -33,7 +32,7 @@
   }
   &--translucent {
     color: var(--color-accent-12);
-    background-color: opacity(var(--color-accent-12), 95%);
+    background-color: functions.opacity(var(--color-accent-12), 95%);
     backdrop-filter: var(--translucent);
     -webkit-backdrop-filter: var(--translucent);
   }
