--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,4 +1,5 @@
 @use '@/styles/lib/functions';
+@use '@/styles/lib/mixins';
 
 .card {
   overflow: hidden;
@@ -35,55 +36,6 @@
   }
   &--transparent {
     background-color: transparent;
-  }
-
-  &--small {
-    // font-size: var(--font-size-5); // Adjust as necessary
-
-    .heading {
-      padding: var(--space-2);
-    }
-    .body {
-      padding: var(--space-2);
-    }
-    .actions {
-      padding: var(--space-2);
-    }
-  }
-
-  &--medium {
-    .heading {
-      padding: var(--space-4);
-    }
-    .body {
-      padding: var(--space-4);
-    }
-    .actions {
-      padding: var(--space-4);
-    }
-  }
-
-  &--large {
-    .heading {
-      padding: var(--space-5);
-    }
-    .body {
-      padding: var(--space-5);
-    }
-    .actions {
-      padding: var(--space-5);
-    }
-  }
-  &--xlarge {
-    .heading {
-      padding: var(--space-6);
-    }
-    .body {
-      padding: var(--space-6);
-    }
-    .actions {
-      padding: var(--space-6);
-    }
   }
   img {
     width: 100%;
@@ -139,5 +91,58 @@
   &--outlined {
     box-shadow: 0 0 0 1px var(--color-gray-a6);
     // border: 1px solid var(--color-gray-4);
+  }
+}
+
+.wd-card {
+  @include mixins.breakpoints {
+    &-small {
+      // font-size: var(--font-size-5); // Adjust as necessary
+
+      .heading {
+        padding: var(--space-2);
+      }
+      .body {
+        padding: var(--space-2);
+      }
+      .actions {
+        padding: var(--space-2);
+      }
+    }
+
+    &-medium {
+      .heading {
+        padding: var(--space-4);
+      }
+      .body {
+        padding: var(--space-4);
+      }
+      .actions {
+        padding: var(--space-4);
+      }
+    }
+
+    &-large {
+      .heading {
+        padding: var(--space-5);
+      }
+      .body {
+        padding: var(--space-5);
+      }
+      .actions {
+        padding: var(--space-5);
+      }
+    }
+    &-xlarge {
+      .heading {
+        padding: var(--space-6);
+      }
+      .body {
+        padding: var(--space-6);
+      }
+      .actions {
+        padding: var(--space-6);
+      }
+    }
   }
 }
