--- a/src/components/ExpansionPanel/ExpansionPanel.module.scss
+++ b/src/components/ExpansionPanel/ExpansionPanel.module.scss
@@ -1,3 +1,5 @@
+@use '@/styles/lib/mixins.scss';
+
 .panelContainer {
   border-radius: max(var(--radius-3), var(--radius-full));
   overflow: hidden;
@@ -26,23 +28,6 @@
   &:hover {
     background-color: var(--color-accent-a3);
   }
-
-  &--small {
-    padding: var(--space-2) var(--space-4);
-    font-size: var(--font-size-3);
-  }
-  &--medium {
-    padding: var(--space-3) var(--space-4);
-    font-size: var(--font-size-4);
-  }
-  &--large {
-    padding: var(--space-4) var(--space-5);
-    font-size: var(--font-size-5);
-  }
-  &--xlarge {
-    padding: var(--space-4) var(--space-5);
-    font-size: var(--font-size-6);
-  }
 }
 
 .contentWrapper {
@@ -60,6 +45,49 @@
     margin-top: 0;
     &.outlined {
       border-top: 1px solid var(--color-accent-a6);
+    }
+  }
+}
+
+.wd-expansion {
+  &-header {
+    @include mixins.breakpoints {
+      &-small {
+        padding: var(--space-2) var(--space-4);
+        font-size: var(--font-size-3);
+      }
+      &-medium {
+        padding: var(--space-3) var(--space-4);
+        font-size: var(--font-size-4);
+      }
+      &-large {
+        padding: var(--space-4) var(--space-5);
+        font-size: var(--font-size-5);
+      }
+      &-xlarge {
+        padding: var(--space-4) var(--space-5);
+        font-size: var(--font-size-6);
+      }
+    }
+  }
+  &-item {
+    @include mixins.breakpoints {
+      &-small {
+        padding: var(--space-2) var(--space-4);
+        font-size: var(--font-size-3);
+      }
+      &-medium {
+        padding: var(--space-3) var(--space-4);
+        font-size: var(--font-size-4);
+      }
+      &-large {
+        padding: var(--space-4) var(--space-5);
+        font-size: var(--font-size-5);
+      }
+      &-xlarge {
+        padding: var(--space-4) var(--space-5);
+        font-size: var(--font-size-6);
+      }
     }
   }
 }
