--- a/src/components/Tab/Tab.module.scss
+++ b/src/components/Tab/Tab.module.scss
@@ -1,4 +1,4 @@
-// Tabs.module.scss
+@use '@/styles/lib/mixins.scss';
 
 .list {
   display: flex;
@@ -30,33 +30,6 @@
     color: var(--color-accent-9-contrast);
   }
 
-  &--large {
-    height: 40px;
-    font-size: var(--font-size-5);
-    padding: var(--space-1) var(--space-4);
-    border-radius: max(var(--radius-4), var(--radius-full));
-  }
-
-  &--medium {
-    font-size: var(--font-size-4);
-    padding: var(--space-1) var(--space-3);
-    border-radius: max(var(--radius-3), var(--radius-full));
-    height: 34px;
-  }
-  &--xlarge {
-    height: 48px;
-    border-radius: max(var(--radius-5), var(--radius-full));
-    font-size: var(--font-size-5);
-    padding: var(--space-2) var(--space-4);
-  }
-
-  &--small {
-    height: 28px;
-    font-size: var(--font-size-3);
-    border-radius: max(var(--radius-3), var(--radius-full));
-    padding: var(--space-1) var(--space-2);
-  }
-
   &.highContrast {
     color: var(--color-accent-12);
     &:hover {
@@ -67,6 +40,37 @@
       color: var(--color-accent-1);
       background-color: var(--color-accent-12);
       box-shadow: boxShadowAlpha(var(--color-accent-11));
+    }
+  }
+}
+
+.wt-tab {
+  &--trigger {
+    @include mixins.breakpoints {
+      &-xlarge {
+        height: 48px;
+        border-radius: max(var(--radius-5), var(--radius-full));
+        font-size: var(--font-size-5);
+        padding: var(--space-2) var(--space-4);
+      }
+      &-large {
+        height: 40px;
+        font-size: var(--font-size-5);
+        padding: var(--space-1) var(--space-4);
+        border-radius: max(var(--radius-4), var(--radius-full));
+      }
+      &-medium {
+        font-size: var(--font-size-4);
+        padding: var(--space-1) var(--space-3);
+        border-radius: max(var(--radius-3), var(--radius-full));
+        height: 34px;
+      }
+      &-small {
+        height: 28px;
+        font-size: var(--font-size-3);
+        border-radius: max(var(--radius-3), var(--radius-full));
+        padding: var(--space-1) var(--space-2);
+      }
     }
   }
 }
