--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -1,33 +1,7 @@
+@use '@/styles/lib/mixins.scss';
+
 .wrapper {
   margin-bottom: var(--space-2);
-
-  &--xlarge {
-    .label {
-      font-size: var(--font-size-4);
-      margin-bottom: var(--space-1);
-    }
-  }
-
-  &--large {
-    .label {
-      font-size: var(--font-size-4);
-      margin-bottom: var(--space-1);
-    }
-  }
-
-  &--medium {
-    .label {
-      font-size: var(--font-size-3);
-      margin-bottom: var(--space-1);
-    }
-  }
-
-  &--small {
-    .label {
-      font-size: var(--font-size-2);
-      margin-bottom: var(--space-1);
-    }
-  }
 }
 .group {
   display: flex;
@@ -39,33 +13,6 @@
   &.block {
     width: 100%;
     max-width: 100%;
-  }
-
-  &--xlarge {
-    .input {
-      height: 48px;
-      padding: var(--space-1) var(--space-4);
-    }
-  }
-
-  &--large {
-    .input {
-      height: 40px;
-      padding: var(--space-1) var(--space-4);
-    }
-  }
-
-  &--medium {
-    .input {
-      height: 32px;
-      padding: var(--space-1) var(--space-3);
-    }
-  }
-  &--small {
-    .input {
-      height: 28px;
-      padding: var(--space-1) var(--space-3);
-    }
   }
 }
 
@@ -161,4 +108,69 @@
 
 .error.active {
   display: block;
+}
+
+.wd-textfield {
+  &--wrapper {
+    @include mixins.breakpoints {
+      &-xlarge {
+        .label {
+          font-size: var(--font-size-4);
+          margin-bottom: var(--space-1);
+        }
+      }
+
+      &-large {
+        .label {
+          font-size: var(--font-size-4);
+          margin-bottom: var(--space-1);
+        }
+      }
+
+      &-medium {
+        .label {
+          font-size: var(--font-size-3);
+          margin-bottom: var(--space-1);
+        }
+      }
+
+      &-small {
+        .label {
+          font-size: var(--font-size-2);
+          margin-bottom: var(--space-1);
+        }
+      }
+    }
+  }
+
+  &--group {
+    @include mixins.breakpoints {
+      &-xlarge {
+        .input {
+          height: 48px;
+          padding: var(--space-1) var(--space-4);
+        }
+      }
+
+      &-large {
+        .input {
+          height: 40px;
+          padding: var(--space-1) var(--space-4);
+        }
+      }
+
+      &-medium {
+        .input {
+          height: 32px;
+          padding: var(--space-1) var(--space-3);
+        }
+      }
+      &-small {
+        .input {
+          height: 28px;
+          padding: var(--space-1) var(--space-3);
+        }
+      }
+    }
+  }
 }
