--- a/src/components/TextArea/TextArea.module.scss
+++ b/src/components/TextArea/TextArea.module.scss
@@ -2,17 +2,11 @@
   margin-bottom: var(--space-2);
 }
 
-.label {
-  font-size: var(--font-size-3);
-  margin-bottom: var(--space-1);
-  padding-left: var(--space-1);
-}
-
 .textArea {
   font-family: 'Inter';
   width: calc(100% - var(--space-4) * 2);
   padding: var(--space-3);
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   border-radius: max(var(--radius-3), var(--radius-full));
   outline: none;
   background-color: transparent;
@@ -36,11 +30,11 @@
 
   resize: none;
   &--solid {
+    border: 1px solid transparent;
+    background-color: var(--color-panel);
     &:focus,
     &:hover {
-      outline: none;
-      border-color: var(--color-accent-9);
-      // box-shadow: 0 0 0 4px var(--color-accent-a9);
+      border-color: var(--color-gray-6);
     }
   }
 
@@ -50,12 +44,20 @@
       outline: none;
       border-color: var(--color-accent-9);
       background-color: var(--color-surface-accent);
-      // box-shadow: 0 0 0 4px var(--color-accent-a9);
+    }
+  }
+
+  &--outlined {
+    &:focus,
+    &:hover {
+      outline: none;
+      background-color: transparent;
+      border-color: var(--color-accent-9);
     }
   }
 
   &.textAreaError {
-    border: 2px solid var(--color-red-9);
+    border: 1px solid var(--color-red-9);
     background-color: var(--color-red-surface);
   }
 
@@ -64,8 +66,12 @@
   }
 }
 
+.textArea::placeholder {
+  color: var(--color-gray-7);
+}
+
 .textArea[data-has-value='true']:invalid {
-  border: 2px solid var(--color-red-9);
+  border: 1px solid var(--color-red-9);
   background-color: var(--color-red-surface);
   margin-bottom: 0;
 }
