--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -27,6 +27,7 @@
   background-color: transparent;
   border-color: var(--color-gray-6);
   color: var(--color-gray-12);
+  box-shadow: var(--shadow-theme);
   transition: border 0.3s ease;
   margin-bottom: 20px;
 
