--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -35,8 +35,10 @@
   }
 }
 .content {
-  padding: var(--space-4);
+  margin: var(--space-4);
   max-width: 450px;
+  box-shadow: var(--shadow-theme);
+  border-radius: max(var(--radius-4), var(--radius-full));
   width: 100%;
   overflow: hidden;
   cursor: default;
