--- a/src/components/DropdownMenu/DropdownMenu.module.scss
+++ b/src/components/DropdownMenu/DropdownMenu.module.scss
@@ -6,7 +6,7 @@
   color: var(--color-gray-12);
   z-index: 1;
   border-radius: var(--radius-4);
-
+  border: 1px solid var(--color-gray-a6);
   box-shadow: var(--shadow-theme);
   margin-top: 5px;
   min-width: 200px;
@@ -58,6 +58,7 @@
 
 .subContent {
   position: absolute;
+  border: 1px solid var(--color-gray-a6);
   left: calc(100% + var(--space-2));
   top: calc(var(--space-1) * -1);
   box-shadow: var(--shadow-theme);
