--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -33,6 +33,7 @@
     aspect-ratio: 1/1;
     background-color: var(--color-accent-9-contrast);
 
+    border: 1px solid var(--color-gray-a6);
     border-radius: max(var(--radius-3), var(--radius-full));
     box-shadow: var(--shadow-theme);
     transform: translate(-50%, -50%);
