--- a/src/components/TextArea/TextArea.module.scss
+++ b/src/components/TextArea/TextArea.module.scss
@@ -7,15 +7,13 @@
   font-family: 'Inter';
   width: calc(100% - var(--space-4) * 2);
   padding: var(--space-3);
-  border: 1px solid transparent;
+  border: 1px solid var(--color-gray-a6);
   border-radius: max(var(--radius-3), var(--radius-full));
   outline: none;
   background-color: transparent;
-  border-color: var(--color-gray-6);
   color: var(--color-gray-12);
   transition: border 0.3s ease;
   margin-bottom: 20px;
-
   box-shadow: var(--shadow-theme);
 
   &--xlarge {
