--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -21,11 +21,10 @@
   width: 100%;
   line-height: 28px;
   box-sizing: border-box;
-  border: 1px solid transparent;
+  border: 1px solid var(--color-gray-a6);
   border-radius: max(var(--radius-3), var(--radius-full));
   outline: none;
   background-color: transparent;
-  border-color: var(--color-gray-6);
   color: var(--color-gray-12);
   box-shadow: var(--shadow-theme);
   transition: border 0.3s ease;
@@ -36,7 +35,7 @@
     background-color: var(--color-panel);
     &:focus,
     &:hover {
-      border-color: var(--color-gray-6);
+      border: 1px solid var(--color-gray-a6);
     }
   }
   &--outlined {
