--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -21,27 +21,27 @@
 .wd-avatar {
   @include mixins.breakpoints {
     &-small {
-      width: 40px;
-      height: 40px;
-      font-size: var(--font-size-4);
+      width: var(--component-height-small);
+      height: var(--component-height-small);
+      font-size: var(--font-size-2);
     }
 
     &-medium {
-      width: 60px;
-      height: 60px;
-      font-size: var(--font-size-6);
+      width: var(--component-height-medium);
+      height: var(--component-height-medium);
+      font-size: var(--font-size-3);
     }
 
     &-large {
-      width: 81px;
-      height: 81px;
-      font-size: var(--font-size-8);
+      width: var(--component-height-large);
+      height: var(--component-height-large);
+      font-size: var(--font-size-4);
     }
 
     &-xlarge {
-      width: 100px;
-      height: 100px;
-      font-size: var(--font-size-8);
+      width: var(--component-height-xlarge);
+      height: var(--component-height-xlarge);
+      font-size: var(--font-size-4);
     }
   }
 }
