--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -94,28 +94,28 @@
   &--item {
     @include mixins.breakpoints {
       &-xlarge {
-        height: 48px;
+        height: var(--component-height-xlarge);
         border-radius: max(var(--radius-5), var(--radius-full));
         font-size: var(--font-size-5);
         padding: var(--space-2) var(--space-4);
       }
 
       &-large {
-        height: 40px;
+        height: var(--component-height-large);
         font-size: var(--font-size-5);
         padding: var(--space-1) var(--space-4);
         border-radius: max(var(--radius-4), var(--radius-full));
       }
 
       &-medium {
+        height: var(--component-height-medium);
         font-size: var(--font-size-4);
         padding: var(--space-1) var(--space-3);
         border-radius: max(var(--radius-3), var(--radius-full));
-        height: 34px;
       }
 
       &-small {
-        height: 28px;
+        height: var(--component-height-small);
         font-size: var(--font-size-3);
         border-radius: max(var(--radius-3), var(--radius-full));
         padding: var(--space-1) var(--space-2);
