--- a/src/components/Toast/Toast.module.scss
+++ b/src/components/Toast/Toast.module.scss
@@ -60,8 +60,8 @@
   }
 
   > .action {
-    width: 32px;
-    height: 32px;
+    width: var(--component-height-medium);
+    height: var(--component-height-medium);
     display: flex;
     color: inherit;
     flex-direction: row;
@@ -78,7 +78,7 @@
     }
   }
   &.open {
-    height: 48px;
+    height: var(--component-height-xlarge);
     opacity: 1;
     // transform: translateY(0);
   }
