--- a/src/styles/lib/tokens/components.scss
+++ b/src/styles/lib/tokens/components.scss
@@ -1,8 +1,9 @@
 .woozdesign {
-  --appbar-height: calc(64px * var(--scaling));
+  --appbar-height: calc(48px * var(--scaling));
 
   --component-height-small: calc(28px * var(--scaling));
   --component-height-medium: calc(32px * var(--scaling));
   --component-height-large: calc(40px * var(--scaling));
   --component-height-xlarge: calc(48px * var(--scaling));
+  --component-height-xxlarge: calc(64px * var(--scaling));
 }
