menu wrap fixed, dropdown width fixed

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -33,6 +33,12 @@
       align-items: center;
       justify-content: center;
     }
+
+    > .label {
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
     &:hover {
       background-color: var(--color-accent-5);
     }
