--- a/src/styles/lib/tokens/components.scss
+++ b/src/styles/lib/tokens/components.scss
@@ -3,6 +3,7 @@
   --drawer-header-height: calc(48px * var(--scaling));
   --drawer-footer-height: calc(48px * var(--scaling));
 
+  --component-height-xsmall: calc(16px * var(--scaling));
   --component-height-small: calc(28px * var(--scaling));
   --component-height-medium: calc(32px * var(--scaling));
   --component-height-large: calc(40px * var(--scaling));
